[B]Version 2.1.1[/B]
- Updated All Links
- Removed broken documentary section
- Added On Demand Videos Section
- Added Lastest Full On Demand Episodes Section
- Updated Icons

[B]Version 2.1.0[/B]
- Updated Alex Jones Show to HD Feed

[B]Version 2.0.9[/B]
- Fixed fanart and icon links
- Removed urllib3 dependency

[B]Version 2.0.8[/B]
- Removed Censored Content
- Cleaned up Menu System
- Added New Shows
- Added Millie Weaver Youtube Channel

[B]Version 2.0.7[/B]
- Updated Youtube feeds

[B]Version 2.0.6[/B]
- Updated links
- Updated Youtube feeds
- Added War Room Youtube feed
- Cleaned up some code

[B]Version 2.0.5[/B]
- Updated links
- Added Youtube feeds
- Added new shows
- Removed discontinued shows
- Fixed past audio podcasts

[B]Version 2.0.4[/B]
- Updated links
- Added Paul Joseph Watson section
- Fixed random bugs with Krypton

[B]Version 2.0.3[/B]
- Updated links

[B]Version 2.0.2[/B]
- Updated all links 
- Switched everything over to HD sources 
  (except live streams - only SD from source)
- Fixed thumbnail for each link 
- Updated Icon and Fanart 

[B]Version 2.0.1[/B]
- Update for Youtube now forcing people over to api v3

[B]Version 2.0.0[/B]
- Update for Kodi, removed many unncessary dependencies

[B]Version 1.0.1[/B]
- Added License.txt(open source license)
- Removed colors from nightly news, caused issues on some devices when added to library.

[B]Version 1.0.0[/B]
- Added More Documentaries
- Added Add to Library Feature for Documentaries
- Added Add to Library Feature for Infowars Nightly News
- Cleaned up the settings for the app so only items pertent to end user listed.

[B]Version 0.1.4[/B]
- Added Infowars Live Audio
- Added Infowars Historic Live Audio
- Added Infowars Historic Live Video
- Added Infowars Clips
- Added Infowars Nightly News

[B]Version 0.1.3[/B]
- Added Alex Jones Documentaries

[B]Version 0.1.2[/B]
- Corrected Issues with device compatibility

[B]Version 0.1.0[/B]
- initial build