@@ -1,3 +1,10 @@
+[B]Version 2.1.2[/B]
+- Updated On Demand links
+- Updated Recent Full Show links
+- Updated Live Events Links
+- Removed Counter Think
+- Added Kaitlin Bennett Liberty Hangout Youtube Channel
+
 [B]Version 2.1.1[/B]
 - Updated All Links
 - Removed broken documentary section
